<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/downloadNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="Download name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLength="4"
                android:text="87%"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadNameTv" />

            <ProgressBar
                android:id="@+id/simpleProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                app:layout_constraintEnd_toStartOf="@id/progressTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadNameTv" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/progressTvsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/simpleProgressBar">

                <TextView
                    android:id="@+id/downloadedTotalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/downloadTotalTxt"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/downloadSpeedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/downloadSpeedTxt"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/elapsedTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/elapsedTimeTxt"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/remainingTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/remainingTimeTxt"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/downloadStatusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/STATUS"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressTvsLayout" />

            <androidx.appcompat.widget.LinearLayoutCompat
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:weightSum="4"
                app:layout_constraintTop_toBottomOf="@id/downloadStatusTv">

                <Button
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:id="@+id/pauseButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/pause"
                    android:textSize="8sp"
                    android:textColor="#FF1493"
                    android:layout_weight="1"
                    android:textStyle="bold|italic"
                    android:theme="@style/FlatButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressTv" />

                <Button
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:id="@+id/resumeButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/resume"
                    android:textSize="8sp"
                    android:textColor="#FF1493"
                    android:textStyle="bold|italic"
                    android:theme="@style/FlatButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressTv" />

                <Button
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:id="@+id/restartButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/restart"
                    android:textSize="8sp"
                    android:textColor="#FF1493"
                    android:textStyle="bold|italic"
                    android:theme="@style/FlatButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressTv" />

                <Button
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:id="@+id/cancelButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel"
                    android:textSize="8sp"
                    android:textColor="#FF1493"
                    android:textStyle="bold|italic"
                    android:theme="@style/FlatButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressTv" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
